Commit Semana en el break

--- a/Codigo_P1/Backend/DAL.Repository/DAL.Repository.csproj
+++ b/Codigo_P1/Backend/DAL.Repository/DAL.Repository.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DAL.EF\DAL.EF.csproj" />
+  </ItemGroup>
+
 </Project>
