--- a/Codigo_P1/Backend/API.W/Properties/launchSettings.json
+++ b/Codigo_P1/Backend/API.W/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "API.W": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
