--- a/Codigo_P1/Backend/API/API.csproj
+++ b/Codigo_P1/Backend/API/API.csproj
@@ -20,5 +20,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
