--- a/Codigo_P1/Backend/DAL.EF/DAL.EF.csproj
+++ b/Codigo_P1/Backend/DAL.EF/DAL.EF.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DAL.DO\DAL.DO.csproj" />
+  </ItemGroup>
+
 </Project>
