--- a/Codigo_P1/Backend/API/appsettings.json
+++ b/Codigo_P1/Backend/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectionAPI": "Server=SCIIV2;Database=SocialGoal;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
