--- a/Codigo_P1/Backend/DAL/DAL.csproj
+++ b/Codigo_P1/Backend/DAL/DAL.csproj
@@ -17,4 +17,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DAL.DO\DAL.DO.csproj" />
+    <ProjectReference Include="..\DAL.EF\DAL.EF.csproj" />
+    <ProjectReference Include="..\DAL.Repository\DAL.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
