--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@ Codigo_P2/Solution/FrontEnd.W/bin/
 Codigo_P2/Solution/FrontEnd.W/obj/
 Codigo_P2/Solution/FrontEnd.Login/bin/
 Codigo_P2/Solution/FrontEnd.Login/obj/
+QuizSemana13/Backend/.vs/
+QuizSemana13/Backend/API.W/obj/
+QuizSemana13/Backend/API/obj/
+QuizSemana13/Backend/BS/obj/
+QuizSemana13/Backend/DAL.DO/obj/
+QuizSemana13/Backend/DAL.EF/obj/
+QuizSemana13/Backend/DAL.Repository/obj/
+QuizSemana13/Backend/DAL/obj/
