--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,18 @@ QuizSemana13/Backend/DAL.DO/obj/
 QuizSemana13/Backend/DAL.EF/obj/
 QuizSemana13/Backend/DAL.Repository/obj/
 QuizSemana13/Backend/DAL/obj/
+zExamenFinal/Backend/.vs/
+zExamenFinal/Backend/API.W/bin/
+zExamenFinal/Backend/API.W/obj/
+zExamenFinal/Backend/API/bin/
+zExamenFinal/Backend/API/obj/
+zExamenFinal/Backend/BS/bin/
+zExamenFinal/Backend/BS/obj/
+zExamenFinal/Backend/DAL.DO/bin/
+zExamenFinal/Backend/DAL.DO/obj/
+zExamenFinal/Backend/DAL.EF/bin/
+zExamenFinal/Backend/DAL.EF/obj/
+zExamenFinal/Backend/DAL.Repository/bin/
+zExamenFinal/Backend/DAL.Repository/obj/
+zExamenFinal/Backend/DAL/bin/
+zExamenFinal/Backend/DAL/obj/
